# bao_experiments

./: Cargo.toml  README.md
criterion_bencher/: Cargo.toml  plot.py  results_rpi2.title  results_rpi3.title  results_x86_64_noturbo.title
criterion_bencher/benches/: bench.rs
criterion_bencher/results_x86_64_noturbo/bench_group/1024/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/1048576/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/128/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/131072/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/16384/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/2048/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/256/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/262144/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/32768/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/4096/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/512/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/524288/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/64/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/65536/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/8192/report/: index.html
criterion_bencher/results_x86_64_noturbo/bench_group/report/: index.html
criterion_bencher/results_x86_64_noturbo/report/: index.html
(+2030 files in other folders)
