[package]
name = "bao_experiments"
version = "0.0.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
blake2s_simd = { path = "../blake2_simd/blake2s" }
rayon = "1.1.0"
rand = "0.6.5"
page_size = "0.4.1"
arrayvec = "0.4.10"
constant_time_eq = "0.1.3"

[[bench]]
name = "libtest"

[features]
single = []
