[package]
name = "bao_experiments"
version = "0.0.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
blake2s_simd = "0.5.4"
rayon = "1.1.0"
rand = "0.7.0"
page_size = "0.4.1"
arrayvec = "0.5.0"
constant_time_eq = "0.1.3"

[[bench]]
name = "libtest"

[features]
single = []
